[package]
name = "spl-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
solana-sdk = "1.14.12"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
tokio = "1.24.2"
spl-token-faucet = { git = "https://github.com/paul-schaaf/spl-token-faucet" }
solana-client = "1.14.12"
solana-program = "1.14.12"
shellexpand = { version = "3.0.0", features = ["tilde"] }
